--- a/tindev/package.json
+++ b/tindev/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.1",
+    "async-storage": "^0.1.0",
+    "asyncstorage": "^1.5.0",
     "axios": "^0.21.0",
     "react": "16.13.1",
     "react-native": "0.63.4",
